resourcify and password hash
