# internal/data/request/user.go
@@ -1,0 +1,7 @@
+package request
+
+type UserCreate struct {
+	Username string `json:"username"`
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
