# internal/handlers/user.go
@@ -4,8 +4,11 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	_ "github.com/nabidam/gin-starter/internal/data/request"
+	_ "github.com/nabidam/gin-starter/internal/data/response"
 	"github.com/nabidam/gin-starter/internal/models"
 	"github.com/nabidam/gin-starter/internal/repository"
+	"github.com/nabidam/gin-starter/internal/utils/resource"
 )
 
 type UserHandler struct {
@@ -18,17 +21,30 @@ func NewUserHandler(userRepository repository.UserRepository) *UserHandler {
 	}
 }
 
-// @BasePath /api/v1
-
-// PingExample godoc
-// @Summary ping example
+// @Summary Get all users
 // @Schemes
-// @Description do ping
-// @Tags example
+// @Description Get all users
+// @Tags users
+// @Produce json
+// @Success 200 {array} response.UserResponse
+// @Router /users [get]
+func (h *UserHandler) GetUsers(c *gin.Context) {
+	result := h.userRepository.GetAll()
+
+	users := resource.ToResponse(result)
+
+	c.JSON(http.StatusOK, users)
+}
+
+// @Summary Create new user
+// @Schemes
+// @Description Create new user
+// @Tags users
 // @Accept json
 // @Produce json
-// @Success 200 {string} Helloworld
-// @Router /example/helloworld [get]
+// @Param user body request.UserCreate true "User data"
+// @Success 200 {object} response.UserResponse
+// @Router /users [post]
 func (h *UserHandler) CreateUser(c *gin.Context) {
 	var user models.User
 	if err := c.ShouldBindJSON(&user); err != nil {
@@ -36,28 +52,14 @@ func (h *UserHandler) CreateUser(c *gin.Context) {
 		return
 	}
 
+	// hash password
+	user.HashPassword(user.Password)
 	err := h.userRepository.Create(&user)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 
-	c.JSON(http.StatusOK, user)
-}
-
-func (h *UserHandler) GetUsers(c *gin.Context) {
-	result := h.userRepository.GetAll()
-
-	// var users []response.UserResponse
-	// for _, value := range result {
-	// 	user := response.UserResponse{
-	// 		ID:       value.ID,
-	// 		Username: value.Username,
-	// 		Email:    value.Email,
-	// 		Password: value.Password,
-	// 	}
-	// 	users = append(users, user)
-	// }
-
-	c.JSON(http.StatusOK, result)
+	userOut := user.ToResponse()
+	c.JSON(http.StatusOK, userOut)
 }
